<resources>
    <string name="app_name">cinema-mobile</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="name_text">Name</string>
    <string name="text_ic_number">IC Number</string>
    <string name="contact_no_text">Contact Number</string>
    <string name="register_text">Register</string>
    <string name="new_account_text">Create New Account</string>
    <string name="home_text">Home</string>
    <string name="tickets_text">Tickets</string>
    <string name="account_text">Account</string>
    <string name="logout_text">Logout</string>
    <string name="now_playing_text">Now Playing</string>
    <string name="movie_poster_text">Movie Poster</string>
    <string name="title_text">Title</string>
    <string name="running_time_text">Running Time</string>
    <string name="language_text">Language</string>
    <string name="release_date_text">Release Date</string>
    <string name="distributor_rating">Distributor</string>
    <string name="censor_rating_text">Censor Rating</string>
    <string name="casts_text">Casts</string>
    <string name="genre_text">Genre</string>
    <string name="genres_text">Genres</string>
    <string name="director_text">Director</string>
    <string name="synopsis_text">Synopsis</string>
    <string name="purchase_tickets_text">Purchase Tickets</string>
    <string name="old_password_text">Old Password</string>
    <string name="new_password_text">New Password</string>
    <string name="save_changes_text">Save Changes</string>
    <string name="purchase_ticket_text">Purchase Ticket</string>
    <string name="total_tickets_text">Total Tickets</string>
    <string name="ticket_price_text">Ticket Price</string>
    <string name="ticket_available_text">Ticket(s) Available</string>
    <string name="input_data_text">Please input the fields</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="new_tickets_text">New Tickets</string>
    <string name="past_tickets_text">Past Tickets</string>
    <string name="use_ticket_text">Use Ticket</string>
    <string name="actors_text">Actors</string>
    <string name="preference_text">Your Personal Preference</string>
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>
    <string name="preference_details_text">Tell us your favorite actors, genres, and directors, so we can recommend movies you might like!</string>
    <string name="save_preferences_text">Save Preferences</string>
    <string name="directors_text">Directors</string>
    <string name="recommended_text">Recommended</string>
</resources>
